--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-native": "0.79.1",
     "react-native-blob-util": "^0.21.2",
     "react-native-calendars": "^1.1311.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
